--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
     <p>文章作者 发布时间 修改时间</p>
     <p>这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落</p>
     <p>这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落这是一个段落</p>
-    <table>
-        <td title="这是一张图片"><img src="http://www.physcatchem.com/Uploads/2017-12-28/5a444b2624d5c.jpg" width="500"
+            <td title="这是一张图片"><img src="http://www.physcatchem.com/Uploads/2017-12-28/5a444b2624d5c.jpg" width="500"
                 height="400" alt="这是一张图片" /></td>
-    </table>
-    这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落<br>
-    这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落
+    
+    <p>这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落<br>
+    这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落这是二个段落</p>
     <p>其他文章</p>
-    <ol type="1" start="1">
+    <ol>
         <li>第一篇文章</li>
         <li>第二篇文章</li>
         <li>第三篇文章</li>
@@ -87,7 +86,7 @@
             <tr height="35px">
                 <td>密码</td>
                 <td>
-                    <input type="password" name="pwd" id="pwd" value="........." />
+                    <input type="password" name="pwd" id="pwd" placeholder="********" />
                 </td>
             </tr>
             <tr height="35px">
